Add dataset parameter to CloudFileReader.validateUserCanRead
The GcsPdao implementation is now a no-op if the dataset does not necessitate file permission checking.
Wired the dataset in throughout.